--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,12 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 body {
-    margin: 0;
+  margin: 0;
 }
-
+.form-item {
+  width: 200px;
+}
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -11,6 +16,8 @@ body {
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
+
+  
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
